fixed create event section text not visible problem

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -23,7 +23,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #cfdce1;
-    --foreground: #ededed;
+    --foreground: #171717;
   }
 }
 
